@startuml CD_Analytics_Entities
!theme cerulean-outline

title AdventureWorks Sales BI Platform\nAnalytics / Data Warehouse Entities (Star Schema)
caption Star schema with SalesFact at center linked to six dimension tables

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 11
skinparam titleFontSize 16
skinparam titleFontStyle bold
skinparam packageStyle rectangle
skinparam class {
    BackgroundColor #FAFAFA
    BorderColor #4A90D9
    HeaderBackgroundColor #E8F0FE
    FontColor #333333
    BackgroundColor<<Fact>> #FFCCBC
    BorderColor<<Fact>> #BF360C
    HeaderBackgroundColor<<Fact>> #FF8A65
    BackgroundColor<<Dimension>> #B3E5FC
    BorderColor<<Dimension>> #01579B
    HeaderBackgroundColor<<Dimension>> #4FC3F7
}

skinparam ArrowColor #1565C0
skinparam ArrowThickness 1.5

hide empty members

' ─────────────────────────────────────────────
'  Fact table
' ─────────────────────────────────────────────
package "Ecom.Api.Entities.Analytics" <<Rectangle>> #FFF7ED {

    class SalesFact <<Fact>> #FFEDD5 {
        + SalesOrderDetailID : int <<PK>>
        + SalesOrderID : int
        + OrderDate : DateTime
        + DueDate : DateTime
        + ShipDate : DateTime?
        + OnlineOrderFlag : bool
        + OrderQty : short
        + UnitPrice : decimal
        + UnitPriceDiscount : decimal
        + LineTotal : decimal
        + Freight : decimal
        + TaxAmt : decimal
        __ foreign keys __
        + CustomerID : int <<FK>>
        + ProductID : int <<FK>>
        + CurrencyRateID : int? <<FK>>
        + SalesPersonID : int? <<FK>>
        + ShipMethodID : int <<FK>>
        + TerritoryID : int <<FK>>
    }

    ' ─────────────────────────────────────────
    '  Dimension tables
    ' ─────────────────────────────────────────
    together {
        class CustomerDim <<Dimension>> #E0F2FE {
            + CustomerID : int <<PK>>
            + FirstName : string
            + LastName : string
            + MiddleName : string
            + PersonType : string
        }

        class ProductDim <<Dimension>> #E0F2FE {
            + ProductID : int <<PK>>
            + Name : string
            + ProductNumber : string
            + Color : string
            + StandardCost : decimal
            + ListPrice : decimal
            + SubCategoryName : string
            + CategoryName : string
        }
    }

    together {
        class TerritoryDim <<Dimension>> #E0F2FE {
            + TerritoryID : int <<PK>>
            + Name : string
            + CountryRegionCode : string
            + Group : string
        }

        class CurrencyDim <<Dimension>> #E0F2FE {
            + CurrencyID : int <<PK>>
            + CurrencyCode : string
            + AverageRate : decimal
            + EndOfDayRate : decimal
            + Name : string
        }
    }

    together {
        class SalesPersonDim <<Dimension>> #E0F2FE {
            + BusinessEntityID : int <<PK>>
            + SalesQuota : decimal?
            + Bonus : decimal
            + CommissionPct : decimal
            + TerritoryID : int
            + FirstName : string
            + LastName : string
        }

        class ShipMethodDim <<Dimension>> #E0F2FE {
            + ShipMethodID : int <<PK>>
            + Name : string
            + ShipBase : decimal
            + ShipRate : decimal
        }
    }
}

' ─────────────────────────────────────────────
'  Star schema relationships (Fact -> Dimensions)
' ─────────────────────────────────────────────
SalesFact "0..*" --> "1" CustomerDim : CustomerID >
SalesFact "0..*" --> "1" ProductDim : ProductID >
SalesFact "0..*" --> "1" TerritoryDim : TerritoryID >
SalesFact "0..*" --> "0..1" CurrencyDim : CurrencyRateID >
SalesFact "0..*" --> "0..1" SalesPersonDim : SalesPersonID >
SalesFact "0..*" --> "1" ShipMethodDim : ShipMethodID >

' ─────────────────────────────────────────────
'  Legend
' ─────────────────────────────────────────────
note top of SalesFact
    <b>Star Schema Fact Table</b>
    Maps to SQL view <i>vSalesFact</i> in AdventureWorksDW_Sales.
    SalesPersonID and CurrencyRateID are nullable FKs —
    online orders have no assigned salesperson or currency rate.
    All dimension joins are performed by EF Core LINQ
    via navigation properties resolved in DashboardService.
end note

legend bottom right
    |= Symbol |= Meaning |
    | --> | FK relationship (Fact to Dimension) |
    | <<Fact>> | Fact table (measures/metrics) |
    | <<Dimension>> | Dimension table (descriptive attributes) |
    | <<PK>> | Primary key |
    | <<FK>> | Foreign key |
    | #FFCCBC | Fact table header color |
    | #B3E5FC | Dimension table header color |
endlegend

@enduml
